@@ -1,1 +1,0 @@
-REGISTER ^lirc/.* PERMISSIONS root.root 0660
