@@ -14,7 +14,7 @@ LOAD_MODULES=true
 
 # Run "lircd --driver=help" for a list of supported drivers.
 DRIVER="UNCONFIGURED"
-# If DEVICE is set to /dev/lirc and devfs is in use /dev/lirc/0 will be
+# If DEVICE is set to /dev/lirc and udev is in use /dev/lirc0 will be
 # automatically used instead
 DEVICE=""
 MODULES=""
