@@ -125,7 +125,6 @@ Save ()
 . /usr/share/debconf/confmodule
 
 if [ "$1" = "configure" ]; then
-	[ -x /usr/sbin/update-devfsd ] && /usr/sbin/update-devfsd >&2
 	db_get lirc/install_devices
 	if $RET; then
 		make_devices
