@@ -2,8 +2,9 @@ lirc (0.8.2-1+c0.sidux.5) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
   * fix make-kpkg compatibility.
+  * remove devfs support.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 27 Jan 2008 00:41:49 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 27 Jan 2008 00:43:20 +0100
 
 lirc (0.8.2-1) experimental; urgency=low
 
